<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/help_bg" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/help_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="60.0dip"
            android:text="@string/spy_rule_title"
            android:textColor="#ffffff33"
            android:textSize="20.0sp" />

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80.0dip"
            android:layout_marginLeft="20.0dip"
            android:layout_marginRight="20.0dip"
            android:layout_marginTop="30.0dip"
            android:scrollbars="none" >

            <TextView
                android:id="@+id/help_detail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.2"
                android:text="@string/spy_rule"
                android:textColor="@color/white"
                android:textSize="18.0sp" />
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10.0dip"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip" >

        <ImageView
            android:id="@+id/iv_spyrule_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/spy_drawable_back" />
    </RelativeLayout>

</RelativeLayout>